--- a/build.gradle
+++ b/build.gradle
@@ -1,78 +1,37 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.3'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' apply false
+    id 'io.spring.dependency-management'
+    id 'org.openapi.generator' apply false
     id 'java'
 }
 
-group = 'com.struchev.invest'
-version = '1.0.0'
+group = 'ru.tinkoff.adapter'
+version = '0.0.1-SNAPSHOT'
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
+subprojects {
+
+    apply plugin: 'java'
+    apply plugin: 'application'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.openapi.generator'
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
     }
-}
 
-repositories {
-    mavenCentral()
-}
+    dependencies {
+        project(":tinkoff-grpc")
+        project(":tinkoff-invest")
+        implementation "io.springfox:springfox-boot-starter:${springfox}"
+        implementation "org.openapitools:jackson-databind-nullable:${jacksonDatabindNullableVersion}"
+    }
 
-dependencies {
-    // spring
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.3'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
+    }
 
-    // retry
-    implementation 'org.springframework.retry:spring-retry:2.0.5'
-    implementation 'org.springframework:spring-aspects:6.1.5'
-
-    // telegram
-    implementation 'com.github.pengrad:java-telegram-bot-api:7.0.0'
-
-    // client
-    implementation 'org.reactivestreams:reactive-streams:1.0.3'
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.9'
-
-    // tinkoff grpc lib
-    implementation 'ru.tinkoff.piapi:java-sdk-core:1.5'
-    implementation 'io.grpc:grpc-api:1.43.0'
-
-    // monitoring
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-
-    // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
-
-    runtimeOnly 'org.postgresql:postgresql'
-
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
-    testCompileOnly 'org.projectlombok:lombok:1.18.30'
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.testcontainers:testcontainers:1.19.7'
-    testImplementation 'org.testcontainers:postgresql:1.15.3'
-
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-}
-
-test {
-    useJUnitPlatform()
-}
-
-bootBuildImage {
-    imageName = "romanew/invest:latest"
-}
-
-bootRun {
-    systemProperties = System.properties
 }
 
